fixed z-index レイアウト 修正

--- a/src/pages/notFound/NotFound.module.scss
+++ b/src/pages/notFound/NotFound.module.scss
@@ -19,11 +19,6 @@ $width: responsive-width(pc);
   align-items: center;
   justify-content: center;
 
-  animation-name: fadeIn;
-  animation-duration: 0.4s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-out;
-
   &_inner {
     position: relative;
     display: flex;
